# weight-compression

./: .gitignore  AGENTS.md  LICENSE  NOTES.md  NOTICE  README.md  REPRODUCE.md  index.html  predictive_wholemodel_result.json  pyproject.toml  references.bib  reproduce.py  verify.py
.github/workflows/: pages.yml
Split12/: README.md  pyproject.toml  verify.py
Split12/inference/: README.md
Split12/site/: index.html
Split12/tools/: stream_validate.py
docs/: index.html
method/: REPRODUCE.md  RESULTS.md
method/tools/: extract_glm_sample.py  stream_validate.py
research/: FINAL_REPORT.md  scratch_awq_realx.py  scratch_ladder.py
research/artifacts/: layer1_expert_input_manifest.json  synthetic_result.json
research/notes/: NEXT_DIRECTIONS.md  capability-eval-path.md  compression-vs-compute-payoff.md  density-and-native-compute.md  findings-ledger.md  mental-model.md
research/tools/: inspect_shard.py  lossless_exhaustion.workflow.js
site/: index-social-preview.html  index.html  render-social-hero.ps1
src/: REPRODUCE.md  RESULTS.md
src/tools/: merge_glm.py  (+3 more)
tools/: capture_activations.py  fused_eval.py  fused_eval_large.py  fused_eval_mixed.py  fused_large_summary.json  fused_mixed_summary.json  fused_summary.json  inspect_safetensors.py  make_synthetic_nemotron.py  predictive_runtime.workflow.js  prompts_eval.txt  prompts_large.py  quant_eval_driver.py  run_one_condition.py  streamed_forward.py  survey_analysis.workflow.js
workflows/: README.md  claim-grounding-loop.md  hypothesis-scout-loop.md  hypothesis-tester-loop.md  result-reflection-loop.md
(+455 files in other folders)
