[project]
name = "nemotron-compression"
version = "0.1.0"
description = "Research tools for lossless LLM parameter compression."
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "hf-xet>=1.5.1",
    "huggingface-hub>=0.36.2",
    "ipykernel>=7.3.0",
    "lz4>=4.4.5",
    "matplotlib>=3.11.0",
    "numcodecs>=0.16.5",
    "numpy>=2.5.0",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "psutil>=7.2.2",
    "pyarrow>=24.0.0",
    "safetensors>=0.8.0",
    "scipy>=1.18.0",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers==4.57.3",
    "xxhash>=3.8.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
