[project]
name = "weight-compression"
version = "0.1.0"
description = "Exact lossless compression and verification for BF16 LLM weights."
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.36.2",
    "numpy>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
